# ClinicalTrialIntelligence

./: .dockerignore  .gitignore  Dockerfile.pipeline  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: download_aact.sh
dbt/benchmark/: dbt_project.yml  profiles.yml.example
dbt/benchmark/models/marts/: mart_activity_trends.sql  mart_trial_landscape.sql
dbt/benchmark/models/staging/: _sources.yml  stg_daily_activity.sql  stg_trials.sql
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
kestra/flows/: daily_streaming_flow.yml  monthly_batch_flow.yml
spark/: enrich_and_load.py
streaming/: Dockerfile.flink  Dockerfile.kestra  docker-compose.yml  flink-config.yaml  init.sql  pyproject.flink.toml
streaming/jobs/: registration_pulse_job.py
streaming/producers/: producer.py
streaming/sync/: pg_to_bq.py
